@@ -35,6 +35,8 @@ German:  Jan Czarnowski <czarnowski@coftware.de>
 
 Italian: Emanuele Zattin
 
+Japanese: Victor Alexander Debuque <victor@nuspace.net.au>
+
 Lituanian: Tomas Paplauskas <tmzsegardc@accessatc.net>
 
 Norwegian: Roger 'Stigma' Knutsen,
