@@ -1,0 +1,292 @@
+<?php
+$lang['admin']['CSS'] = 'CSS';
+$lang['admin']['about'] = '情報';
+$lang['admin']['action'] = 'Action';
+$lang['admin']['active'] = '有効';
+$lang['admin']['addcontent'] = '新規コンテンツの追加';
+$lang['admin']['addcss'] = '新規CSSの追加';
+$lang['admin']['addgroup'] = '新規グループの追加';
+$lang['admin']['additionaleditors'] = '追加エディター';
+$lang['admin']['addtemplate'] = '新規テンプレートの追加';
+$lang['admin']['adduser'] = '新規ユーザーの追加';
+$lang['admin']['addusertag'] = 'ユーザー定義タグの追加';
+$lang['admin']['adminaccess'] = '管理者アクセスへ';
+$lang['admin']['adminlog'] = '管理者ログ';
+$lang['admin']['adminsystemtitle'] = 'CMS管理システム';
+$lang['admin']['advanced'] = '上級';
+$lang['admin']['aliasalreadyused'] = 'そのエイリアスは既に他のページで使われています';
+$lang['admin']['aliasmustbelettersandnumbers'] = 'エイリアスは全てローマ字か数字となります。';
+$lang['admin']['aliasnotaninteger'] = 'エイリアスは数字列は不可です。';
+$lang['admin']['assignments'] = 'ユーザーの認証';
+$lang['admin']['associationexists'] = 'このアソシエーションは既に存在します。';
+$lang['admin']['back'] = 'メニューに戻る';
+$lang['admin']['backtoplugins'] = 'プラグインリストに戻る';
+$lang['admin']['cancel'] = 'キャンセル';
+$lang['admin']['clearadminlog'] = '管理者ログをクリア';
+$lang['admin']['code'] = 'コード';
+$lang['admin']['confirmdefault'] = 'デフォルトページに設定しますか?';
+$lang['admin']['confirmdeletedir'] = 'このディレクトリと含まれるファイルやフォルダを削除しますか?';
+$lang['admin']['content'] = 'コンテンツ';
+$lang['admin']['contentmanagement'] = 'コンテンツ管理';
+$lang['admin']['contenttype'] = 'コンテンツタイプ';
+$lang['admin']['copy'] = 'コピー';
+$lang['admin']['copytemplate'] = 'テンプレートをコピー';
+$lang['admin']['create'] = '作成';
+$lang['admin']['createnewfolder'] = '新しいフォルダを作成';
+$lang['admin']['cssalreadyused'] = 'そのCSS名は既に使用されています';
+$lang['admin']['cssmanagement'] = 'CSS管理';
+$lang['admin']['currentassociations'] = '現在のアソシエーション';
+$lang['admin']['currentdirectory'] = '現在のディレクトリ';
+$lang['admin']['currentgroups'] = '現在のグループ';
+$lang['admin']['currentpages'] = '現在のページ';
+$lang['admin']['currenttemplates'] = '現在のテンプレート';
+$lang['admin']['currentusers'] = '現在のユーザー';
+$lang['admin']['custom404'] = '404エラーメッセージをカスタマイズ';
+$lang['admin']['database'] = 'データベース';
+$lang['admin']['databaseprefix'] = 'データベースPrefix';
+$lang['admin']['databasetype'] = 'データベースタイプ';
+$lang['admin']['date'] = '日付';
+$lang['admin']['default'] = 'デフォルト';
+$lang['admin']['delete'] = '削除';
+$lang['admin']['deleteconfirm'] = '本当に削除しますか?';
+$lang['admin']['deletecss'] = 'CSSを削除';
+$lang['admin']['directoryexists'] = 'このディレクトリはすでに存在します。';
+$lang['admin']['down'] = '下へ';
+$lang['admin']['edit'] = '編集';
+$lang['admin']['editconfiguration'] = 'コンフィギュレーションを編集';
+$lang['admin']['editcontent'] = 'コンテンツを編集';
+$lang['admin']['editcss'] = 'スタイルシートを編集';
+$lang['admin']['editgroup'] = 'グループを編集';
+$lang['admin']['editpage'] = 'ページを編集';
+$lang['admin']['edittemplate'] = 'テンプレートを編集';
+$lang['admin']['edituser'] = 'ユーザーを編集';
+$lang['admin']['editusertag'] = 'ユーザー定義タグを編集';
+$lang['admin']['email'] = 'Eメールアドレス';
+$lang['admin']['errorchildcontent'] = 'コンテンツはまだ中に子コンテンツがあります。それらを先に削除して下さい。';
+$lang['admin']['errorcopyingtemplate'] = 'テンプレートのコピーに失敗';
+$lang['admin']['errorcreatingassociation'] = 'アソシエーションの作成に失敗';
+$lang['admin']['errorcssinuse'] = 'このスタイルシートはあるテンプレートかページで使用されています。これらのアソシエーションを先に削除してください。';
+$lang['admin']['errordefaultpage'] = '現在のデフォルトページを削除できません。他のページを先に設定して下さい。';
+$lang['admin']['errordeletingassociation'] = 'アソシエーションの削除にエラー';
+$lang['admin']['errordeletingcss'] = 'CSSの削除に失敗';
+$lang['admin']['errordeletingdirectory'] = 'ディレクトリを削除できません。パーミッションのエラーが考えられるので確認して下さい。';
+$lang['admin']['errordeletingfile'] = 'ファイルを削除できません。パーミッションのエラーが考えられるので確認して下さい。';
+$lang['admin']['errorgettingcssname'] = 'スタイルシート名の取得に失敗';
+$lang['admin']['errorgettingtemplatename'] = 'テンプレート名の取得に失敗';
+$lang['admin']['errorinsertingcss'] = 'スタイルシートのデータベースへの追加に失敗しました';
+$lang['admin']['errorinsertinggroup'] = 'グループのデータベースへの追加に失敗しました。';
+$lang['admin']['errorinsertingtag'] = 'ユーザータグのデータベースへの追加に失敗しました。';
+$lang['admin']['errorinsertingtemplate'] = 'テンプレートのデータベースへの追加に失敗しました。';
+$lang['admin']['errorinsertinguser'] = 'ユーザーのデータベースへの追加に失敗しました。';
+$lang['admin']['errorretrievingcss'] = 'スタイルシートの検索に失敗しました。';
+$lang['admin']['errorretrievingtemplate'] = 'テンプレートの検索に失敗しました。';
+$lang['admin']['errortemplateinuse'] = 'このテンプレートはまだ利用されてます。まずはその設定を削除して下さい。';
+$lang['admin']['errorupdatingcss'] = 'スタイルシートの更新に失敗';
+$lang['admin']['errorupdatinggroup'] = 'グループの更新に失敗';
+$lang['admin']['errorupdatingtemplate'] = 'テンプレートの更新に失敗';
+$lang['admin']['errorupdatinguser'] = 'ユーザーの更新に失敗';
+$lang['admin']['errorupdatingusertag'] = 'ユーザータグに更新に失敗';
+$lang['admin']['erroruserinuse'] = 'このユーザーはまだコンテンツページを所有しています。削除する前に、他のユーザーへ所有権を変更して下さい。';
+$lang['admin']['false'] = 'False';
+$lang['admin']['filecreatedirnodoubledot'] = 'ディレクトリは\'..\'を含むことができません。';
+$lang['admin']['filecreatedirnoname'] = '名前のないディレクトリは作成できません。';
+$lang['admin']['filecreatedirnoslash'] = 'ディレクトリは\'/\'或いは\'\\\'を含むことができません。';
+$lang['admin']['filemanagement'] = 'ファイル管理';
+$lang['admin']['filename'] = 'ファイル名';
+$lang['admin']['filenotuploaded'] = 'ファイルがアップロードできません。パーミッションのエラーが考えられるので確認して下さい。';
+$lang['admin']['filesize'] = 'ファイルサイズ';
+$lang['admin']['firstname'] = 'ファイル名';
+$lang['admin']['groupmanagement'] = 'グループ管理';
+$lang['admin']['grouppermissions'] = 'グループパーミッション';
+$lang['admin']['headtags'] = 'ヘッダータグ';
+$lang['admin']['help'] = 'ヘルプ';
+$lang['admin']['helpaddtemplate'] = '<p>テンプレートはサイトのコンテンツの見栄えや雰囲気を設定します。</p><p>ここでレイアウトを作成し、スタイルシートセクションにCSSを追加すると、サイトの様々な要素を設定できます。</p>';
+$lang['admin']['helplisttemplate'] = '<p>このページでは、テンプレートの作成、編集、削除を行います。</p><p>新しいテンプレートを作成するには、<u>"新しいテンプレートの追加</u>"ボタンをクリックして下さい。</p><p>同じテンプレートを全てのページに適用する場合は、<u>全てのコンテンツの適用</u>リンクをクリックして下さい。</p><p>テンプレートを複製する場合は、<u>コピー</u>アイコンをクリックし、その後新しく複製されたテンプレートに名前を付けます。</p>';
+$lang['admin']['hostname'] = 'ホスト名';
+$lang['admin']['idnotvalid'] = 'IDが有効ではありません。';
+$lang['admin']['imagemanagement'] = 'イメージ管理';
+$lang['admin']['informationmissing'] = '情報が見つかりません。';
+$lang['admin']['install'] = 'インストール';
+$lang['admin']['invalidcode'] = '有効でないコードが入力されました。';
+$lang['admin']['invalidtemplate'] = 'テンプレートが有効ではありません。';
+$lang['admin']['itemid'] = '項目ID';
+$lang['admin']['itemname'] = '項目名';
+$lang['admin']['language'] = '言語';
+$lang['admin']['lastname'] = 'ラストネーム';
+$lang['admin']['logout'] = 'ログアウト';
+$lang['admin']['menutext'] = 'メニューテキスト';
+$lang['admin']['missingparams'] = 'あるパラメーターが不明か不正です。';
+$lang['admin']['modifygroupassignments'] = 'グループ割り当ての修正';
+$lang['admin']['moduleabout'] = '%sモジュールに関して';
+$lang['admin']['modulehelp'] = '%sモジュールのヘルプ';
+$lang['admin']['moduleinterface'] = '%sインターフェース';
+$lang['admin']['modules'] = 'モジュール';
+$lang['admin']['move'] = '移動';
+$lang['admin']['name'] = '名前';
+$lang['admin']['needpermissionto'] = 'この機能を利用するには\'%s\'パーミッションが必要です。';
+$lang['admin']['needupgrade'] = 'アップグレードが必要';
+$lang['admin']['newtemplatename'] = '新しいテンプレート名';
+$lang['admin']['next'] = '次へ';
+$lang['admin']['noaccessto'] = '%sへのアクセスなし';
+$lang['admin']['nocss'] = 'スタイルシートなし';
+$lang['admin']['noentries'] = 'エントリーなし';
+$lang['admin']['nofieldgiven'] = 'フィールドが見つかりません!';
+$lang['admin']['nofiles'] = 'ファイルなし';
+$lang['admin']['nopasswordmatch'] = 'パスワードが一致しません。';
+$lang['admin']['norealdirectory'] = 'ディレクトリが見つかりません';
+$lang['admin']['norealfile'] = 'ファイルは存在しません';
+$lang['admin']['notinstalled'] = 'インストールされていません';
+$lang['admin']['owner'] = 'オーナー';
+$lang['admin']['pagealias'] = 'ページエイリアス';
+$lang['admin']['parent'] = '親ページ';
+$lang['admin']['password'] = 'パスワード';
+$lang['admin']['passwordagain'] = 'パスワード(再確認)';
+$lang['admin']['permission'] = 'パーミッション';
+$lang['admin']['permissions'] = 'パーミッション';
+$lang['admin']['permissionschanged'] = 'パーミッションが更新されました。';
+$lang['admin']['pluginabout'] = '%sタグに関して';
+$lang['admin']['pluginhelp'] = '%sタグのヘルプ';
+$lang['admin']['pluginmanagement'] = 'プラグイン管理';
+$lang['admin']['prefsupdated'] = '画面設定が更新されました。';
+$lang['admin']['preview'] = 'プレビュー';
+$lang['admin']['previous'] = '前';
+$lang['admin']['removecssassociation'] = 'スタイルシートアソシエーションを削除';
+$lang['admin']['saveconfig'] = '設定の保存';
+$lang['admin']['send'] = '送る';
+$lang['admin']['setallcontent'] = '全てのページに適用';
+$lang['admin']['setallcontentconfirm'] = '全てのページにこのテンプレートを適用しますか?';
+$lang['admin']['showinmenu'] = 'メニューに表示';
+$lang['admin']['showsite'] = 'サイトを表示';
+$lang['admin']['sitedownmessage'] = 'サイトダウンメッセージ';
+$lang['admin']['siteprefs'] = '全体の設定';
+$lang['admin']['status'] = '状態';
+$lang['admin']['stylesheet'] = 'スタイルシート';
+$lang['admin']['submit'] = 'OK';
+$lang['admin']['tags'] = 'タグ';
+$lang['admin']['template'] = 'テンプレート';
+$lang['admin']['templateexists'] = 'このテンプレート名は既に使われています。';
+$lang['admin']['templatemanagement'] = 'テンプレート管理';
+$lang['admin']['title'] = 'タイトル';
+$lang['admin']['tools'] = 'ツール';
+$lang['admin']['true'] = 'true';
+$lang['admin']['type'] = 'タイプ';
+$lang['admin']['typenotvalid'] = 'タイプが誤っています。';
+$lang['admin']['uninstall'] = 'アンイントール';
+$lang['admin']['uninstallconfirm'] = 'これをアンインストールしますか?';
+$lang['admin']['up'] = '上へ';
+$lang['admin']['upgrade'] = 'アップグレード';
+$lang['admin']['upgradeconfirm'] = 'これをアップグレードしますか?';
+$lang['admin']['uploadfile'] = 'ファイルのアップロード';
+$lang['admin']['url'] = 'URL';
+$lang['admin']['useadvancedcss'] = '上級スタイルシート管理を使う';
+$lang['admin']['user'] = 'ユーザー';
+$lang['admin']['userdefinedtags'] = 'ユーザー定義タグ';
+$lang['admin']['usermanagement'] = 'ユーザー管理';
+$lang['admin']['username'] = 'ユーザー名';
+$lang['admin']['usernameincorrect'] = 'ユーザー名、或いはパスワードが誤っています。';
+$lang['admin']['userprefs'] = 'ユーザー画面';
+$lang['admin']['usersassignedtogroup'] = 'ユーザーは%sグループに割り当てられました。';
+$lang['admin']['usertagexists'] = 'この名前のタグは既に存在します。他を選んでください。';
+$lang['admin']['usewysiwyg'] = 'コンテンツにウィジウィグエディタを使う';
+$lang['admin']['version'] = 'バージョン';
+$lang['admin']['view'] = 'サイトの確認';
+$lang['admin']['welcomemsg'] = 'ようこそ %s';
+$lang['admin']['directoryabove'] = '上位階層のディレクトリ';
+$lang['admin']['nodefault'] = '選択されたデフォルトはありません。';
+$lang['admin']['blobexists'] = 'このHtmlブロブ名はすでに存在します。';
+$lang['admin']['blobmanagement'] = 'HTMLブロブ管理';
+$lang['admin']['errorinsertingblob'] = 'HTMLブロブの追加に失敗しました';
+$lang['admin']['addhtmlblob'] = 'Htmlブロブの追加';
+$lang['admin']['edithtmlblob'] = 'Htmlブロブの編集';
+$lang['admin']['filemanager'] = 'ファイル管理';
+$lang['admin']['imagemanager'] = 'イメージ管理';
+$lang['admin']['encoding'] = 'エンコード';
+$lang['admin']['clearcache'] = 'キャッシュのクリア';
+$lang['admin']['clear'] = 'クリア';
+$lang['admin']['cachecleared'] = 'クリアされたキャッシュ';
+$lang['admin']['apply'] = '適用';
+$lang['admin']['none'] = 'なし';
+$lang['admin']['wysiwygtouse'] = '利用するウィジウィグエディタの選択';
+$lang['admin']['cachable'] = 'キャッシュの利用';
+$lang['admin']['hasdependents'] = '依存があります。';
+$lang['admin']['missingdependency'] = '依存先が不明';
+$lang['admin']['minimumversion'] = '最低バージョン';
+$lang['admin']['depsformodule'] = '%sモジュールに依存';
+$lang['admin']['installed'] = 'インストール済み';
+$lang['admin']['author'] = '作成者';
+$lang['admin']['changehistory'] = '履歴の変更';
+$lang['admin']['moduleinstallmessage'] = '%sモジュールへのメッセージのインストール';
+$lang['admin']['moduleuninstallmessage'] = '%sモジュールへのメッセージへのアンインストール';
+$lang['admin']['admintheme'] = '管理画面テーマ';
+$lang['admin']['addstylesheet'] = 'スタイルシートの追加';
+$lang['admin']['editstylesheet'] = 'スタイルシートの編集';
+$lang['admin']['addcssassociation'] = 'スタイルシートアソシエーションを追加';
+$lang['admin']['attachstylesheet'] = 'このスタイルシートを添付';
+$lang['admin']['attachtemplate'] = 'このテンプレートを添付';
+$lang['admin']['main'] = 'メイン';
+$lang['admin']['pages'] = 'ページ';
+$lang['admin']['files'] = 'ファイル';
+$lang['admin']['layout'] = 'レイアウト';
+$lang['admin']['usersgroups'] = 'ユーザー&amp;グループ';
+$lang['admin']['extensions'] = '拡張機能';
+$lang['admin']['preferences'] = '画面設定';
+$lang['admin']['admin'] = 'サイト管理';
+$lang['admin']['viewsite'] = 'サイトの確認';
+$lang['admin']['templatecss'] = 'テンプレートをスタイルシートに割り当て';
+$lang['admin']['plugins'] = 'プラグイン';
+$lang['admin']['movecontent'] = 'ページの移動';
+$lang['admin']['module'] = 'モジュール';
+$lang['admin']['usertags'] = 'ユーザー定義タグ';
+$lang['admin']['htmlblobs'] = 'HTMLブロブ';
+$lang['admin']['adminhome'] = 'アドミニストレーションホーム';
+$lang['admin']['liststylesheets'] = 'スタイルシート';
+$lang['admin']['preferencesdescription'] = 'サイト全体の画面表示の設定';
+$lang['admin']['adminlogdescription'] = '管理者の作業履歴を表示.';
+$lang['admin']['mainmenu'] = 'メインメニュー';
+$lang['admin']['users'] = 'ユーザー';
+$lang['admin']['usersdescription'] = 'ユーザーの管理';
+$lang['admin']['groups'] = 'グループ';
+$lang['admin']['groupsdescription'] = 'グループの管理';
+$lang['admin']['groupassignments'] = 'グループの割り当て';
+$lang['admin']['groupassignmentdescription'] = 'ユーザーのグループへの割り当て';
+$lang['admin']['groupperms'] = 'グループパーミッション';
+$lang['admin']['grouppermsdescription'] = 'グループ毎のパーミッションとアクセス権限を設定';
+$lang['admin']['pagesdescription'] = 'ページやコンテンツの追加、管理';
+$lang['admin']['htmlblobdescription'] = 'HTMLブロブはページやテンプレート上に置けるコンテンツ群です。';
+$lang['admin']['templates'] = 'テンプレート';
+$lang['admin']['templatesdescription'] = 'ここでテンプレートの追加や編集を行います。テンプレートはサイトの見栄えや雰囲気を作り出します。';
+$lang['admin']['stylesheets'] = 'スタイルシート';
+$lang['admin']['stylesheetsdescription'] = 'スタイルシート管理はテンプレートとは別にスタイルシート（CSS）を管理するのに便利です。';
+$lang['admin']['filemanagerdescription'] = 'ファイルのアップロードと管理';
+$lang['admin']['imagemanagerdescription'] = 'イメージのアップロード、編集、削除';
+$lang['admin']['moduledescription'] = 'モジュールはCMS Made Simpleに様々なカスタム機能を提供';
+$lang['admin']['tagdescription'] = 'コンテンツやテンプレートに追加可能な便利なタグ';
+$lang['admin']['usertagdescription'] = 'ブラウザから簡単に独自タグの作成、修正';
+$lang['admin']['installdirwarning'] = '<em><strong>注意:</strong></em>インストールディレクトリは存在します。完全に削除して下さい。';
+$lang['admin']['subitems'] = 'サブ項目';
+$lang['admin']['extensionsdescription'] = 'モジュール、タグ、その他の拡張機能。';
+$lang['admin']['usersgroupsdescription'] = '項目に関連したユーザーとグループ。';
+$lang['admin']['layoutdescription'] = 'サイトレイアウトオプション。';
+$lang['admin']['admindescription'] = 'サイト管理機能。';
+$lang['admin']['contentdescription'] = 'コンテンツを追加、編集';
+$lang['admin']['enablecustom404'] = 'カスタム404エラーメッセージの利用';
+$lang['admin']['enablesitedown'] = 'サイトダウンメッセージの利用';
+$lang['admin']['bookmarks'] = 'ブックマーク';
+$lang['admin']['managebookmarks'] = 'ブックマークを管理';
+$lang['admin']['editbookmark'] = 'ブックマークを編集';
+$lang['admin']['addbookmark'] = 'ブックマークを追加';
+$lang['admin']['recentpages'] = '最近のページ';
+$lang['admin']['selectgroup'] = 'グループの選択';
+$lang['admin']['updateperm'] = 'パーミッションの更新';
+$lang['admin']['admincallout'] = '管理用ショートカット';
+$lang['admin']['showbookmarks'] = '管理ブックマークの表示';
+$lang['admin']['showrecent'] = '最近使ったページの表示';
+$lang['admin']['attachtotemplate'] = 'テンプレートへスタイルシートの添付';
+$lang['admin']['attachstylesheets'] = 'スタイルシートの添付';
+$lang['admin']['menu_bookmarks'] = '[+]';
+$lang['admin']['globalconfig'] = '全体設定';
+$lang['admin']['adminprefs'] = 'ユーザー画面設定';
+$lang['admin']['adminprefsdescription'] = 'サイト管理の為の画面設定';
+$lang['admin']['managebookmarksdescription'] = 'ここで管理ブックマークを管理します。';
+$lang['admin']['options'] = 'オプション';
+?>
