@@ -1,0 +1,12 @@
+<?php
+$lang['stripbackgroundtags'] = 'CSSからのバックグランドタグをストリップします。';
+$lang['false'] = 'False';
+$lang['true'] = 'True';
+$lang['submit'] = 'OK';
+$lang['help'] = <<<EOF
+	<h3>何ができるのでしょうか?</h3>
+	<p>TinyMCEはウィジウィグエディタとして利用できます。</p>
+	<h3>使用方法</h3>
+	<p>インストールし、ユーザー画面設定から、TinyMCEをウィジウィグエディタとして選択します。</p>
+EOF;
+?>
