@@ -9,6 +9,7 @@ stop some install problems people are having.
 installs
 * Added id and class parameters to the cms_selflink tag
 * Added apply button to editing HTML Blobs
+* Added Japanese translation
 * Changed {content}, {html_blob} and {title} tags to be case
 insensitive
 * Changed logic of included htaccess so that html can be used
